<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>openfin</groupId>
  <artifactId>hello-openfin-selenium-java-example</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>hello-openfin-selenium-java-example</name>
  <url>https://www.openfin.co</url>

  <properties>
        <user.name>support@openfin.co</user.name>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
  </properties>


  <dependencies>
    <dependency>
        <groupId>org.seleniumhq.selenium</groupId>
        <artifactId>selenium-java</artifactId>
        <version>2.52.0</version>
    </dependency>
    <dependency>
        <groupId>org.seleniumhq.selenium</groupId>
        <artifactId>selenium-chrome-driver</artifactId>
        <version>2.52.0</version>
    </dependency>
  </dependencies>
  <build>
    <finalName>hello-openfin-selenium</finalName>

      <plugins>
          <plugin>
              <!-- To combine all the dependencies into one jar: -->
              <!-- mvn assembly:assembly -DdescriptorId=jar-with-dependencies -->
              <!-- need to compile first since this plugin does NOT build the project -->
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-assembly-plugin</artifactId>
            <configuration>
              <archive>
                <manifest>
                  <mainClass>com.openfin.HelloOpenFinTest</mainClass>
                </manifest>
              </archive>
            </configuration>
          </plugin>

      </plugins>

  </build>
</project>
